--- a/product-almonds.html
+++ b/product-almonds.html
@@ -13,25 +13,28 @@
 </head>
 <body class="bg-yellow-50 text-gray-800 text-sm">
 
-<header class="bg-red-800 text-white py-3 px-6 flex items-center justify-between shadow">
-  <h1 class="text-xl font-bold">MajeeoNuts</h1>
-  <nav class="space-x-4 text-sm">
+<!-- Header -->
+<header class="bg-red-800 text-white py-3 px-6 flex flex-col md:flex-row items-center justify-between shadow">
+  <h1 class="text-xl font-bold mb-2 md:mb-0">MajeeoNuts</h1>
+  <nav class="space-x-6 text-sm text-center">
     <a href="home.html" class="hover:underline">Home</a>
     <a href="about.html" class="hover:underline">About Us</a>
     <a href="contact.html" class="hover:underline">Contact Us</a>
   </nav>
 </header>
 
-<!-- Floating button -->
 <a href="cart.html" class="fixed top-4 right-4 bg-red-700 text-white px-3 py-2 rounded-full shadow-lg hover:bg-red-600 z-50 text-sm">
   🛒 Go to Cart
 </a>
 
+<!-- Product Section -->
 <section class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-6 p-4 mt-6">
-  <div>
-    <img src="images/almonds.webp" alt="Premium Almonds" class="w-full aspect-square object-cover rounded shadow"/>
+  <!-- Image -->
+  <div class="flex justify-center">
+    <img src="images/almonds.webp" alt="Premium Almonds" class="rounded shadow object-cover" style="width:300px; height:300px;">
   </div>
 
+  <!-- Product Info -->
   <div>
     <h2 class="text-2xl font-semibold mb-2">Premium Jumbo Almond</h2>
     <div class="flex items-center mb-3">
@@ -53,29 +56,19 @@
       <div><img src="icons/cholesterol.png" class="w-6 h-6 mx-auto"/><p>Cholesterol Free</p></div>
     </div>
 
-    <div class="flex gap-4 mb-4">
+    <div class="flex gap-4 mb-2">
       <button onclick="addToCart()" class="bg-red-700 text-white px-4 py-2 rounded hover:bg-red-800">Add to Cart</button>
       <button onclick="buyNow()" class="bg-green-700 text-white px-4 py-2 rounded hover:bg-green-800">Buy Now</button>
     </div>
+
+    <div id="inline-cart-items" class="space-y-2 mb-4 text-sm"></div>
+
     <p id="added-count" class="text-green-700 mb-2"></p>
-
     <p class="text-gray-600 text-xs">SKU: <strong>DRYF101</strong></p>
-  </div>
-
-  <!-- Cart & Checkout Panel -->
-  <div class="md:col-span-2 mt-6 bg-white rounded shadow p-4">
-    <h3 class="font-semibold mb-2">Your Cart</h3>
-    <div id="cart-items" class="space-y-2 text-sm">
-      <p class="text-gray-500">Your cart is empty.</p>
-    </div>
-    <div class="mt-4" id="checkout-panel" style="display:none">
-      <p class="font-medium mb-1" id="total-items"></p>
-      <p class="font-semibold text-lg mb-2" id="total-price"></p>
-      <button onclick="checkout()" class="w-full bg-red-700 text-white py-2 rounded hover:bg-red-800">Proceed to Payment</button>
-    </div>
   </div>
 </section>
 
+<!-- Description & Benefits Tabs -->
 <section class="max-w-6xl mx-auto px-4">
   <div class="flex gap-6 border-b text-sm font-medium">
     <button id="tab-desc" class="pb-2 tab-active" onclick="showTab('desc')">Description</button>
@@ -94,13 +87,40 @@
   </div>
 </section>
 
+<!-- Footer -->
 <footer class="bg-white border-t mt-12 text-xs">
   <div class="bg-gray-100 py-6 px-4 sm:px-6 lg:px-16">
     <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
-      <div><img src="/logo.png" alt="Logo" class="w-20 mb-2"><p class="text-gray-600">Majeeo Nuts brings quality dry fruits worldwide.</p></div>
-      <div><h4 class="font-semibold mb-1">Quick Links</h4><ul class="text-gray-600 space-y-1"><li><a href="about.html" class="hover:underline">About Us</a></li><li><a href="contact.html" class="hover:underline">Contact Us</a></li><li><a href="bulk-order.html" class="hover:underline">Bulk Ordering</a></li><li><a href="shop.html" class="hover:underline">Shopping</a></li></ul></div>
-      <div><h4 class="font-semibold mb-1">Account Info</h4><ul class="text-gray-600 space-y-1"><li><a href="account.html" class="hover:underline">My Account</a></li><li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li><li><a href="return.html" class="hover:underline">Return Policy</a></li><li><a href="terms.html" class="hover:underline">Terms & Conditions</a></li></ul></div>
-      <div><h4 class="font-semibold mb-1">Contact Details</h4><ul class="text-gray-600 space-y-1"><li>📍 Mumbai, India</li><li>✉️ maheshgawade7799@gmail.com</li><li>📞 +91-7483600212</li></ul></div>
+      <div>
+        <img src="/logo.png" alt="Majeeo Nuts Logo" class="w-20 mb-2">
+        <p class="text-gray-600">Majeeo Nuts brings you carefully selected dry fruits from India and across the world.</p>
+      </div>
+      <div>
+        <h4 class="font-semibold mb-1">Quick Links</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="about.html" class="hover:underline">About Us</a></li>
+          <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
+          <li><a href="bulk-order.html" class="hover:underline">Bulk Ordering</a></li>
+          <li><a href="shop.html" class="hover:underline">Shopping</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold mb-1">Account Info</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li><a href="account.html" class="hover:underline">My Account</a></li>
+          <li><a href="privacy.html" class="hover:underline">Privacy Policy</a></li>
+          <li><a href="return.html" class="hover:underline">Return Policy</a></li>
+          <li><a href="terms.html" class="hover:underline">Terms & Conditions</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="font-semibold mb-1">Contact Details</h4>
+        <ul class="text-gray-600 space-y-1">
+          <li>📍 Mumbai, India</li>
+          <li>✉️ maheshgawade7799@gmail.com</li>
+          <li>📞 +91-7483600212</li>
+        </ul>
+      </div>
     </div>
   </div>
 </footer>
@@ -108,76 +128,28 @@
 <script>
   let cart = JSON.parse(localStorage.getItem('majeeoCart')) || [];
 
-  function updateCartUI() {
-    const container = document.getElementById('cart-items');
+  function updateInlineCart() {
+    const container = document.getElementById('inline-cart-items');
     container.innerHTML = '';
     if (cart.length === 0) {
-      container.innerHTML = '<p class="text-gray-500">Your cart is empty.</p>';
-      document.getElementById('checkout-panel').style.display = 'none';
+      container.innerHTML = '<p class="text-gray-500">Cart is empty.</p>';
       return;
     }
-    let totalPrice = 0;
     cart.forEach((item, idx) => {
-      totalPrice += item.price;
       const div = document.createElement('div');
       div.className = 'flex justify-between items-center';
       div.innerHTML = `
-        <p>${item.name}: ${item.quantity}g — ₹${item.price.toFixed(2)}</p>
-        <button onclick="removeItem(${idx})" class="text-red-500 text-xs">Remove</button>`;
+        <p>${item.name} - ${item.quantity}g = ₹${item.price.toFixed(2)}</p>
+        <button onclick="removeItem(${idx})" class="text-red-500 text-xs">Remove</button>
+      `;
       container.appendChild(div);
     });
-    document.getElementById('total-items').innerText = `Items: ${cart.length}`;
-    document.getElementById('total-price').innerText = `Total: ₹${totalPrice.toFixed(2)}`;
-    document.getElementById('checkout-panel').style.display = 'block';
   }
 
   function removeItem(i) {
     cart.splice(i, 1);
     localStorage.setItem('majeeoCart', JSON.stringify(cart));
-    updateCartUI();
-  }
-
-  function addToCart() {
-    const grams = parseInt(document.getElementById('quantity').value);
-    const price = (1000 / 1000) * grams;
-    cart.push({ name: 'Premium Almonds', quantity: grams, price });
-    localStorage.setItem('majeeoCart', JSON.stringify(cart));
-    document.getElementById('added-count').innerText = `Added ${grams}g to cart`;
-    updateCartUI();
-  }
-
-  function buyNow() {
-    const grams = parseInt(document.getElementById('quantity').value);
-    const amount = (1000 / 1000) * grams * 100;
-    new Razorpay({
-      key: 'rzp_live_LIqOpioBHDIhG4',
-      amount,
-      currency: 'INR',
-      name: 'MajeeoNuts',
-      description: 'Premium Almonds Purchase',
-      handler(response) { alert('Payment successful! ID: ' + response.razorpay_payment_id); },
-      prefill: { email: 'maheshgawade7799@gmail.com' },
-      theme: { color: '#991b1b' }
-    }).open();
-  }
-
-  function checkout() {
-    const total = cart.reduce((s,i) => s + i.price, 0) * 100;
-    new Razorpay({
-      key: 'rzp_live_LIqOpioBHDIhG4',
-      amount: Math.round(total),
-      currency: 'INR',
-      name: 'MajeeoNuts',
-      description: 'Cart Checkout',
-      handler(response) {
-        alert('Payment successful! ID: ' + response.razorpay_payment_id);
-        cart = [];
-        localStorage.removeItem('majeeoCart');
-        updateCartUI();
-      },
-      prefill: { email: 'maheshgawade7799@gmail.com' },
-      theme: { color: '#991b1b' }
-    }).open();
+    updateInlineCart();
   }
 
   function showTab(tab) {
@@ -187,10 +159,43 @@
     document.getElementById('tab-benefits').classList.toggle('tab-active', tab === 'benefits');
   }
 
+  function updatePrice() {
+    const grams = parseInt(document.getElementById('quantity').value);
+    const price = (1000 / 1000) * grams;
+    document.getElementById('price').innerText = price.toFixed(0);
+  }
+
+  function addToCart() {
+    const grams = parseInt(document.getElementById('quantity').value);
+    const price = (1000 / 1000) * grams;
+    cart.push({ name: 'Premium Almonds', quantity: grams, price });
+    localStorage.setItem('majeeoCart', JSON.stringify(cart));
+    document.getElementById('added-count').innerText = `Added ${grams}g to cart`;
+    updateInlineCart();
+  }
+
+  function buyNow() {
+    const grams = parseInt(document.getElementById('quantity').value);
+    const amount = (1000 / 1000) * grams * 100;
+    new Razorpay({
+      key: 'rzp_live_LIqOpioBHDIhG4',
+      amount: Math.round(amount),
+      currency: 'INR',
+      name: 'MajeeoNuts',
+      description: 'Premium Almonds Purchase',
+      handler(response) {
+        alert('Payment successful! ID: ' + response.razorpay_payment_id);
+      }
+    }).open();
+  }
+
   document.addEventListener('DOMContentLoaded', () => {
-    updateCartUI();
     showTab('desc');
+    updatePrice();
+    updateInlineCart();
   });
 </script>
+
 </body>
 </html>
+
